<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#3E5F9B"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sebas.login.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:id="@+id/tWelcome"
        android:text="@string/welcome" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/name"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="100sp"
            android:layout_weight="3"
            android:src="@drawable/logo"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/Info"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:id="@+id/info"
            />
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:hint="@string/username"
        android:paddingLeft="10dp"
        android:id="@+id/eUser"
        android:layout_marginBottom="1sp"
        android:background="@color/whitesmoke"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40sp"
        android:id="@+id/ePass"
        android:paddingLeft="10dp"
        android:hint="@string/password"
        android:background="@color/whitesmoke"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="30sp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/royalblue"
            android:id="@+id/bLog"
            android:textSize="25sp"
            android:text="@string/login"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:id="@+id/tor"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/royalblue"
            android:id="@+id/bSign"
            android:textSize="25sp"
            android:text="@string/signin"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp">
        <com.facebook.login.widget.LoginButton
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_weight="5"
            android:id="@+id/fblogin_button"
            android:textSize="30sp"
            android:background="@color/royalblue" />
        <com.google.android.gms.common.SignInButton
            android:id="@+id/GLoginButton"
            android:layout_width="0dp"
            android:layout_height="50sp"
            android:layout_weight="5"
            />
    </LinearLayout>
</LinearLayout>
